codeqr_mail_pdf